Develop.0.2 (#4)
* [변경] MinIO 설정 및 이미지 업로드 검증 로직 개선

* [보안] OWASP ASVS 기반 보안 점검 및 취약점 수정

보안 지침(security.md)에 OWASP ASVS/WSTG/SANS SWAT 표준 프레임워크 참조,
핵심 5대 점검 영역, 의존성 보안, 에러 처리 보안 섹션을 추가하고
점검에서 발견된 취약점들을 구현 수정함.

백엔드:
- Actuator /actuator/** → /actuator/health로 제한
- 레거시 permitAll(/auth/**, /companies/**, /products/**) 제거
- 로그아웃 시 서버측 Refresh Token 무효화
- Random → SecureRandom 교체 (인증번호 생성)
- 인증번호 시도 횟수 5회 제한 (brute force 방지)
- 모든 phone 필드 @Pattern 검증, password 필드 복잡도 @Pattern 통일
- 누락된 @Valid 추가 (MyPage 탈퇴, Admin 상태변경)
- CORS AllowedHeaders 구체화 + 프로덕션 localhost 제거
- application-prod.yml: 에러 정보 노출 차단, Swagger 비활성화, Actuator 최소화
- OWASP Dependency-Check 플러그인 추가

인프라:
- Nginx: CSP/Referrer-Policy/Permissions-Policy 헤더, server_tokens off
- ssl.conf: HSTS includeSubDomains, .map 파일 차단, 로그인 Rate Limit
- pg_hba.conf: 0.0.0.0/0 제거 (Docker 서브넷만 허용)
- MySQL init: 하드코딩 repl_pass → 환경변수(MYSQL_REPL_PASSWORD)로 전환
- docker-compose.prod.yml: 전 서비스 security_opt/cap_drop/memory limit

프론트엔드:
- GENERATE_SOURCEMAP=false (프로덕션 빌드 소스맵 비활성화)
- npm audit 스크립트 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* [추가] 고객/파트너 홈 페이지 및 탭바 네비게이션 구현

- 고객 탭바(홈, 검색, 예약, 채팅, 마이페이지) 추가
- 파트너 탭바(홈, 캘린더, 예약관리, 채팅, 마이페이지) 추가
- 고객 홈: 진행 중 예약, 추천 시터, 최근 시터, 이벤트 배너, 커뮤니티 피드
- 파트너 홈: 오늘 일정, 신규 요청, 수익 요약, 공지사항
- 홈 데이터 조회 훅(useCustomerHome, usePartnerHome) 추가
- 홈 도메인 타입 정의

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* [추가] 관리자 페이지 재구성 및 신규 관리 페이지 추가

- 회원관리: 사용자, 파트너, 파트너 심사
- 예약관리: 예약, 분쟁 관리
- 콘텐츠: 공지사항, 이벤트, 캠페인, 커뮤니티
- 고객지원: FAQ, 문의 관리
- 정산: 정산, 수수료 설정
- 설정: 관리자 프로필, 앱 버전, 감사 로그, 정책, 시스템 설정
- 통계 대시보드
- 기존 관리자 페이지(Company, Inventory, Supplier) 제거 후 재구성
- 관리자 사이드바/헤더 메뉴 업데이트

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* [수정] 비밀번호 재설정 관련 변수 이름 변경 및 API 호출 수정

- ResetPasswordConfirmPage에서 resetToken을 token으로 변경
- ResetPasswordPage에서 verificationId를 requestId로 변경
- ResetPasswordVerifyPage에서 verificationId를 requestId로 변경
- InquiryDetailPage에서 InquiryDetail 타입을 Inquiry로 변경하여 API