@@ -3,8 +3,10 @@ package com.petpro.global.config;
 import com.petpro.global.security.jwt.JwtAuthenticationFilter;
 import com.petpro.global.security.jwt.JwtTokenProvider;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -21,6 +23,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -43,6 +47,7 @@ public class SecurityConfig {
 
     /** JWT 토큰 처리를 위한 프로바이더 */
     private final JwtTokenProvider jwtTokenProvider;
+    private final Environment environment;
 
     /**
      * Spring Security 필터 체인을 구성합니다.
@@ -57,16 +62,23 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
+                .headers(headers -> headers
+                        .httpStrictTransportSecurity(hsts -> hsts
+                                .includeSubDomains(true)
+                                .maxAgeInSeconds(31536000))
+                        .contentTypeOptions(contentTypeOptions -> {})
+                        .frameOptions(frameOptions -> frameOptions.deny())
+                        .xssProtection(xss -> xss
+                                .headerValue(org.springframework.security.web.header.writers.XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK))
+                )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         // Public endpoints - 인증 없이 접근 가능한 엔드포인트
-                        .requestMatchers("/health", "/actuator/**").permitAll()
+                        .requestMatchers("/health", "/actuator/health").permitAll()
                         .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
                         // Auth endpoints - 인증 관련 (로그인, 회원가입, 토큰 갱신, 중복확인, 아이디찾기, 비밀번호재설정, OAuth)
                         .requestMatchers("/v1/auth/**").permitAll()
-                        .requestMatchers("/auth/**").permitAll()
                         // Public GET endpoints
-                        .requestMatchers(HttpMethod.GET, "/companies/**", "/products/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/v1/funeral-homes/**").permitAll()  // 장례식장 조회는 공개
                         // All other requests require authentication - 그 외 모든 요청은 인증 필요
                         .anyRequest().authenticated()
@@ -85,9 +97,19 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:*", "https://*.findplace.co.kr"));
+
+        List<String> allowedOrigins = new ArrayList<>();
+        allowedOrigins.add("https://*.findplace.co.kr");
+
+        // 프로덕션이 아닌 경우에만 localhost 허용
+        boolean isProd = Arrays.asList(environment.getActiveProfiles()).contains("prod");
+        if (!isProd) {
+            allowedOrigins.add("http://localhost:*");
+        }
+
+        configuration.setAllowedOriginPatterns(allowedOrigins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
         configuration.setExposedHeaders(List.of("Authorization", "X-Total-Count"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
